[package]
authors = ["PureStake"]
edition = "2021"
name = "pallet-crowdloan-rewards"
version = '0.6.0'
description = "Reward citizens who participated in a crowdloan to acquire a parachain slot o nthe backing relay chain."

[dependencies]
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"], optional = true }
log = { version = "0.4.22", default-features = false }
parity-scale-codec = { version = "3.6.12", default-features = false}
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.188", optional = true, features = ["derive"], default-features = false }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-trie = { workspace = true, optional = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
pallet-utility = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"serde",
	"log/std",
	"sp-std/std",
	"sp-io/std",
	"scale-info/std",
	"ed25519-dalek/std",
	"pallet-balances/std",
	"pallet-utility/std",
	"sp-trie?/std",
	"serde?/std"
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-trie",
	"ed25519-dalek",
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-utility/try-runtime",
	"sp-runtime/try-runtime"
]
