[package]
authors = ["PureStake"]
edition = "2018"
name = "erc-factory"
version = "0.1.0"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-evm = { git = "https://github.com/purestake/frontier", default-features = false, rev = "677548ce782afd28174548dc4badbedf064e8bae" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-evm/std",
    "sp-runtime/std",
    "sp-std/std",
]
