[package]
name = "pallet-erc20-xcm-bridge"
authors = [ "PureStake" ]
edition = "2021"
version = "1.0.0"

[dependencies]
environmental = { version = "1.1.3", default-features = false }
ethereum-types = { version = "0.14", default-features = false }
serde = { version = "1.0.101", optional = true, features = [ "derive" ] }

# Substrate
frame-support = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32", default-features = false }
frame-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32", default-features = false }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32", default-features = false }
sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.32", default-features = false }

# Frontier
fp-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.32", default-features = false }
pallet-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.32", default-features = false, features = [ "forbid-evm-reentrancy" ] }

#Polkadot / XCM
xcm = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.32", default-features = false }
xcm-executor = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-polkadot-v0.9.32", default-features = false }

[features]
default = [ "std" ]
std = [ "environmental/std", "fp-evm/std", "frame-support/std", "frame-system/std", "pallet-evm/std", "parity-scale-codec/std", "scale-info/std", "serde", "sp-core/std", "sp-runtime/std", "sp-std/std", "xcm-executor/std", "xcm/std" ]
try-runtime = [ "frame-support/try-runtime" ]
