[package]
name = "pallet-ethereum-chain-id"
authors = [ "PureStake" ]
edition = "2021"
version = "1.0.0"

[dependencies]
serde = { version = "1.0.101", optional = true, features = [ "derive" ] }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
]
try-runtime = [ "frame-support/try-runtime" ]
