[package]
name = "pallet-ethereum-chain-id"
authors = { workspace = true }
edition = "2021"
version = "1.0.0"

[dependencies]
serde = { workspace = true, optional = true, features = [ "derive" ] }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive" ] }
scale-info = { workspace = true, features = [ "derive" ] }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
]
try-runtime = [ "frame-support/try-runtime" ]
